@@ -63,6 +63,8 @@ IN DEVELOPMENT
       to ``bzrlib.tests.interversionedfile_implementations``.
       ``bzrlib.store.revision.RevisionStoreTestProviderAdapter`` has moved to
       ``bzrlib.tests.revisionstore_implementations``.
+      ``bzrlib.workingtree.WorkingTreeTestProviderAdapter`` has moved to
+      ``bzrlib.tests.workingtree_implementations``.
       These changes are an API break in the testing infrastructure only.
       (Robert Collins)
 
